[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
maud = "0.26.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rusty-chromaprint = "0.3.0"
futures-util = "0.3"
